# ai-document-writer

./: .gitignore  CLAUDE.md  README.md  TOMORROW_FEB2.md  TOMORROW_MORNING31.md  ai_writer.py  config.py  draft_storage.py  export_docx.py  export_pdf.py  main.py  main_app.py  pyproject.toml  templates.py  web_app.py
static/: style.css
templates/: base.html  index.html  login.html
templates/fragments/: document_result.html  draft_list.html
tests/: conftest.py  test_ai_writer.py  test_draft_storage.py  test_export_docx.py  test_export_pdf.py  test_templates.py
